--- a/style.css
+++ b/style.css
@@ -26,9 +26,11 @@ body{
     color: #fff;
     padding-left: 3.125rem;
     padding-right: 3.125rem;
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
     margin-block-end: 0rem;
     margin-bottom: 0%;
-    border: 1px solid #fff;
+    border: 0.0625px solid #fff;
 
 }
 h3{
@@ -47,38 +49,38 @@ h3{
     height: 4.375rem;
     width: 93.5%; 
     line-height: 4.375rem;
-    font-size: 25px;
+    font-size: 1.5625rem;
     background-color: white;
 
 }
 .sub-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 0.1rem;
-    margin: 5px;
+    grid-gap: 0.0625rem;
+    margin: 0.3125rem;
     background-color: white;
-    border: 1px solid #fff;
+    border: 0.0625rem solid #fff;
     margin-block-start: 0px;
     
     
 }
 .button{
-    width: 73px;
-    height: 65px;
+    width: 4.5625rem;
+    padding: 1rem;
     background-color: rgba(0, 0, 0, 0.8);
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 25px;
+    font-size: 1.5625rem;
     color:white;
     
 }
 .button:hover{
     background-color:rgba(0, 0, 0, 0.9) ;
 }
-@media screen and (min-width: 480px) {
-    .container{
+@media screen and (min-width: 30rem) {
+    body{
         display:flex;
         flex-direction: column;
         justify-content: center;
